2007-05-21 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Added check to ensure
	libboost_thread$BOOST_LIB_SUFFIX is usable.

2007-05-20 Braden McDaniel  <braden@endoframe.com>

	Replaced the browser-wide recursive mutex with several read-write
	mutexes.

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::browser(resource_fetcher &, std::ostream &,
	std::ostream &)): Changed positions of fetcher_ and frame_rate_ in
	the member initializer list to match the declaration order.
	(openvrml::browser::~browser()): Lock the scene_mutex_ for
	reading.
	(openvrml::browser::root_scene() const): Lock the scene_mutex_ for
	reading.
	(openvrml::browser::find_node(const node &) const): Lock the
	scene_mutex_ for reading.
	(openvrml::browser::active_viewpoint() const): Lock the
	active_viewpoint_mutex_ for reading.
	(openvrml::browser::active_viewpoint(viewpoint_node &)): Lock the
	active_viewpoint_mutex_ for writing.
	(openvrml::browser::reset_default_viewpoint()): Lock the
	active_viewpoint_mutex_ for writing.
	(openvrml::browser::active_navigation_info() const): Lock the
	active_navigation_info_mutex_ for reading.
	(openvrml::browser::active_navigation_info(navigation_info_node&)):
	Lock the active_navigation_info_mutex_ for writing.
	(openvrml::browser::reset_default_navigation_info()): Lock the
	active_navigation_info_mutex_ for writing.
	(openvrml::browser::add_viewpoint(viewpoint_node &)): Lock the
	viewpoint_list_mutex_ for writing.
	(openvrml::browser::remove_viewpoint(viewpoint_node &)): Lock the
	viewpoint_list_mutex_ for writing.
	(openvrml::browser::viewer(openvrml::viewer *)): Lock the
	viewer_mutex_ for writing.
	(openvrml::browser::viewer()): Lock the viewer_mutex_ for reading.
	(openvrml::browser::current_speed()): Lock the
	active_navigation_info_mutex_ for reading.
	(openvrml::browser::world_url() const): Lock the scene_mutex_ for
	reading.
	(openvrml::browser::set_world(resource_istream &)): Lock the